# hamster

./: CMakeLists.txt  README.md  main.cu
csrc/: CMakeLists.txt
csrc/core/: Allocator.cpp  Allocator.h  Backend.h  CMakeLists.txt  DefaultDtype.cpp  Device.cpp  Device.h  DeviceType.cpp  DeviceType.h  Formatting.cpp  Half-inl.h  Half.cpp  Half.h  IdWrapper.cpp  IdWrapper.h  Layout.h  LegacyDeviceTypeInit.cpp  LegacyTypeDispatch.cpp  Scalar.cpp  Scalar.h  ScalarType.h  ScalarTypeUtils.h  Storage.cpp  Storage.h  StorageImpl.cpp  StorageImpl.h  Tensor.cpp  Tensor.h  TensorImpl.cpp  TensorMethods.cpp  TensorOptions.cpp  TensorTypeId.cpp  TensorTypeId.h  TensorTypeIdRegistration.cpp  TensorTypeIdRegistration.h  UndefinedTensorImpl.cpp  VariableHooksInterface.cpp  context_base.cpp  tensor.cpp
csrc/core/headers/: tensor.h
csrc/runtime/: ir.cpp
csrc/utils/: AlignOf.h  ArrayRef.h  Backtrace.cpp  Backtrace.h  C++17.cpp  C++17.h  CMakeLists.txt  Exception.cpp  Exception.h  IdWrapper.h  Logging.cpp  Macros.h  Optional.cpp  SmallVector.cpp  SmallVector.h  StringUtil.cpp  StringUtil.h  Type.cpp  Type.h  UniqueVoidPtr.cpp  UniqueVoidPtr.h  flags_use_no_gflags.cpp  intrusive_ptr.cpp  intrusive_ptr.h  storezip.cpp  typeid.cpp  typeid.h
csrc/utils/macros/: Macros.h
include/csrc/core/: Allocator.h  Backend.h  DefaultDtype.h  Device.h  DeviceType.h  Formatting.h  Generator.h  Half-inl.h  Half.h  Layout.h  LegacyDeviceTypeInit.h  LegacyTypeDispatch.h  Scalar.h  ScalarType.h  ScalarTypeUtils.h  Storage.h  StorageImpl.h  Tensor.h  TensorAccessor.h  TensorImpl.h  TensorMethods.h  TensorOptions.h  TensorTypeId.h  TensorTypeIdRegistration.h  Type.h  UndefinedTensorImpl.h  VariableHooksInterface.h  WrapDimMinimal.h  context_base.h
include/csrc/utils/: ArrayRef.h  Backtrace.h  Exception.h  Flags.h  IdWrapper.h  Logging.h  Registry.h  SmallVector.h  StringUtil.h  Type.h  UniqueVoidPtr.h  intrusive_ptr.h  logging_is_not_google_glog.h  typeid.h
include/csrc/utils/macros/: Macros.h
include/runtime/: ir.h
include/utils/: storezip.h
test/: CMakeLists.txt  TensorCreation.cpp  test.cpp
