add_library(csrc_core SHARED 
                    DeviceType.cpp
                    Device.cpp
                    TensorTypeId.cpp
                    TensorTypeIdRegistration.cpp
                    Half.cpp
                    Scalar.cpp
                    Allocator.cpp
                    StorageImpl.cpp
                    Storage.cpp)
