add_library(csrc_core SHARED 
                    DeviceType.cpp
                    Device.cpp
                    TensorTypeId.cpp
                    TensorTypeIdRegistration.cpp
                    Half.cpp
                    Scalar.cpp
                    Allocator.cpp
                    StorageImpl.cpp
                    Storage.cpp
                    DefaultDtype.cpp
                    TensorOptions.cpp
                    context_base.cpp
                    TensorImpl.cpp
                    UndefinedTensorImpl.cpp
                    Tensor.cpp
                    TensorMethods.cpp
                    Formatting.cpp
                    LegacyTypeDispatch.cpp
                    VariableHooksInterface.cpp)
