

add_library(csrc_utils SHARED StringUtil.cpp
                                intrusive_ptr.cpp
                                C++17.h
                                C++17.cpp
                                SmallVector.h
                                SmallVector.cpp
                                ArrayRef.h)